--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -83,3 +83,42 @@ jobs:
             cd /var/www/itechpark.co/api
             npm ci --production
             pm2 restart api || pm2 start server.js --name api
+            pm2 save
+
+      # 9. Test nginx configuration
+      - name: Test nginx configuration
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.SERVER_IP }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          script: |
+            sudo nginx -t
+            sudo systemctl reload nginx
+
+      # 10. Check SSL certificates
+      - name: Check SSL certificates
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.SERVER_IP }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          script: |
+            sudo certbot certificates
+
+      # 11. Verify deployment
+      - name: Verify deployment
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.SERVER_IP }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          script: |
+            echo "Checking main website..."
+            curl -I https://itechpark.co
+            echo "Checking admin dashboard..."
+            curl -I https://admin.itechpark.co
+            echo "Checking API..."
+            curl -I https://api.itechpark.co/api/sections/hero
+            echo "Checking PM2 status..."
+            pm2 list
